fix: adjust lg icon alignment

--- a/src/icons/Icon.scss
+++ b/src/icons/Icon.scss
@@ -6,7 +6,7 @@
   --icon-md: 1rem;
   --icon-md-alignment: -0.125rem;
   --icon-lg: 1.5rem;
-  --icon-lg-alignment: -0.5rem;
+  --icon-lg-alignment: -0.35rem;
   --icon-xl: 2.5rem;
   --icon-xl-alignment: -0.75rem;
   --icon-2xl: 3rem;
